# private-terminal

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/commands/: session-end.md  session-start.md
.projects/00_tracking/: LESSONS.md  PROGRESS.md
.projects/00_tracking/archive/: 2026-04-29_v1_0_build_arc.md  README.md
.projects/00_tracking/memory/: MEMORY.md  m2_dashboard_decisions.md  m3_ticker_decisions.md  m4_sidebar_decisions.md  m5_crypto_futures_decisions.md  m6_indicator_rename.md  m7_news_decisions.md  m85_maintenance_decisions.md  m86_polish_decisions.md  m8_polish_decisions.md  m8p1_edit_decisions.md  s12_decisions.md  s13_decisions.md  s17_phase2_phase3_decisions.md  s18_regime_quadrant_decisions.md  s19_drawdown_decisions.md  s20_pulse_design_decisions.md  s21_pulse_implementation_decisions.md  s22_decisions.md  s23_responsive_density_phase1_decisions.md  s24_decisions.md  tile_grid_convention.md  yahoo_endpoint_gotcha.md
.projects/01_initial_design/: DESIGN.md  potential_killer_feature.mb
.projects/01_initial_design/icon_design/: Backup_of_draft_1.cdr  Backup_of_draft_2.cdr  draft_1.cdr  draft_2.cdr
.projects/02_v1_1_analysis/: v11_analysis_design.md
.projects/03_cross_section_heatmap/: database_expansion.md  pulse_design.md
.projects/04_responsive_density/: design.md
src/: App.tsx  main.tsx  version.ts
src-tauri/: Cargo.toml  LICENSE.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/analysis/: align.rs  correlations.rs  coverage.rs  financial_conditions.rs  macro_overlays.rs  mod.rs  pairs.rs  recession_prob.rs  regime_quadrant.rs  registry.rs  rrg.rs  tests.rs  yield_curve.rs
src-tauri/src/commands/: analysis_cmds.rs  cross_section_cmds.rs  edit_cmds.rs  feed_cmds.rs  indicator_cmds.rs  macro_cmds.rs  mod.rs  news_cmds.rs  sector_cmds.rs  session_cmds.rs  settings_cmds.rs  system_cmds.rs  ticker_cmds.rs
src-tauri/src/cross_section/: compute.rs  mod.rs  percentile.rs  tests.rs
src-tauri/src/db/: mod.rs  schema.sql  seed.sql
src-tauri/src/indicators/: atr.rs  mod.rs  rsi.rs  smma.rs  smma_ribbon.rs
src-tauri/src/sources/: fred.rs  mod.rs  yahoo.rs
src-tauri/src/sources/news/: finnhub.rs  mod.rs  rss.rs
src/components/: AppHeader.tsx  AvwapAnchorsPopover.tsx  CategoryTabs.tsx  IndicatorPanel.tsx  MacroDashboard.tsx  MacroTile.tsx  ManageWatchlistModal.tsx  MarketHoursStrip.tsx  NewsDashboard.tsx  OverlayChips.tsx  RangeSwitch.tsx  Scanner.tsx  SettingsModal.tsx  Sidebar.tsx  StatusBar.tsx  TickerDashboard.tsx  TickerEditPanel.tsx  TickerTile.tsx  TileContextMenu.tsx
src/components/analysis/: AnalysisLayout.tsx  CorrelationsTab.tsx  FinancialConditionsTab.tsx  PairsTab.tsx  RecessionProbTab.tsx  RegimeQuadrantTab.tsx  RrgTab.tsx  TabIntro.tsx  TickerChipPicker.tsx  YieldCurveTab.tsx  registry.ts
src/components/charts/: FeatureChart.tsx
src/components/pulse/: PulseDashboard.tsx
src/components/settings/: AboutTab.tsx  ApiKeysTab.tsx  AppearanceTab.tsx  FeaturesTab.tsx  FeedsTab.tsx  PrivacyTab.tsx  StorageTab.tsx
src/components/shell/: CommandPalette.tsx
src/hooks/: useCommandSearchables.ts  usePersistedState.ts  useRecessionBars.ts  useThemeColors.ts
src/styles/: app.css  chartTheme.ts  tokens.css
src/types/: analysis.ts  cross_section.ts  indicator.ts  macro.ts  news.ts  palette.ts  sector.ts  system.ts  theme.ts
src/utils/: applyThemeToIndicators.ts
