[package]
name = "personal-terminal"
version = "1.0.0"
description = "Private Terminal — local-first desktop research dashboard for personal market study"
edition = "2021"
license = "MIT"
authors = ["PrivateACB <support@privateacb.com>"]
repository = "https://github.com/cerkon1/private-terminal"
homepage = "https://privateacb.com/terminal"
readme = "../README.md"

[lib]
name = "personal_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# Folder picker for the Storage tab's Move/Backup actions (M8.5 (b)).
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Storage — plain SQLite, no SQLCipher (personal, not encrypted)
rusqlite = { version = "0.30", features = ["bundled"] }

# Async runtime + HTTP
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }
# IANA timezone database — used by the chart-open staleness check to know
# when the US equity session has closed (16:00 America/New_York), so we
# only refetch history when the latest saved bar is older than the most
# recent settled close. Avoids the DST-aware-by-hand fragility of a fixed
# UTC offset.
chrono-tz = "0.8"

# Config / env
dotenvy = "0.15"
dirs = "5.0"

# RSS/Atom parsing (M7). feed-rs handles both feed formats uniformly and
# preserves <guid>/<id> for dedup keys.
feed-rs = "1.5"
# SHA-256 for synthetic guid fallback when a feed emits items without <guid>.
sha2 = "0.10"

# Errors + logging
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
